--- a/admin/package.json
+++ b/admin/package.json
@@ -8,18 +8,23 @@
   },
   "dependencies": {
     "@ionic/vue": "0.0.4",
+    "@tinymce/tinymce-vue": "^3.2.2",
+    "@types/tinymce": "^4.5.24",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.28",
     "element-ui": "^2.4.5",
     "sortablejs": "^1.10.2",
+    "tinymce": "^5.4.0",
     "view-design": "^4.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7",
     "vue-session": "^1.0.0",
     "vuex": "^3.4.0",
-    "vux": "^2.9.4"
+    "vux": "^2.9.4",
+    "wangeditor": "^2.1.23"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
