--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./apps/server/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nest-public/nest-oss": "^2.2.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.0.0",
@@ -28,9 +29,11 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.12",
     "@typegoose/typegoose": "^7.2.0",
+    "@types/ali-oss": "^6.0.5",
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "@types/passport-jwt": "^3.0.3",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
@@ -39,6 +42,8 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "multer": "^1.4.2",
+    "multer-aliyun-oss": "^1.1.0",
     "nestjs-typegoose": "^7.1.28",
     "node-pre-gyp": "^0.15.0",
     "passport-jwt": "^4.0.0",
