--- a/admin/package.json
+++ b/admin/package.json
@@ -9,15 +9,19 @@
   "dependencies": {
     "@ionic/vue": "0.0.4",
     "@tinymce/tinymce-vue": "^3.2.2",
+    "@types/echarts": "^4.6.3",
     "@types/tinymce": "^4.5.24",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.28",
+    "echarts": "^4.8.0",
+    "echarts-gl": "^1.1.1",
     "element-ui": "^2.4.5",
     "sortablejs": "^1.10.2",
     "tinymce": "^5.4.0",
     "view-design": "^4.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-property-decorator": "^8.4.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7",
