--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "@types/jest": "25.2.3",
     "@types/mongoose": "^5.7.29",
     "@types/node": "^13.9.1",
+ "@nestjs/swagger": "^4.5.12",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
