--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   # Flutter最亮，最时髦，最酷的路由器。
   fluro: ^1.4.0
   # Flutter小部件，用于将HTML和CSS呈现为Flutter小部件。
-  flutter_html: ^0.9.6
+  flutter_html: ^0.9.8
   # SQLite的Flutter插件，这是一个自包含的，高可靠性的嵌入式SQL数据库引擎。
   sqflite: ^1.1.0
   # Flutter插件，用于读写简单的键值对。在iOS上包装NSUserDefaults，在Android上包装SharedPreferences。
@@ -72,6 +72,7 @@ flutter:
 
   assets:
     - images/girl.jpg
+    - images/avatar.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
